2019-12-19 수련
소인수 분해 풀이